bencher/run_logs/revcomp.3.pypy.log

Wed, 11 Feb 2015 21:17:13 GMT

COMMAND LINE:
/usr/bin/pypy revcomp.pypy-3.pypy 0 < revcomp-input1000.txt

PROGRAM FAILED 


PROGRAM OUTPUT:

Traceback (most recent call last):
  File "app_main.py", line 75, in run_toplevel
  File "revcomp.pypy-3.pypy", line 25
    print(line, end='')
                  ^
SyntaxError: invalid syntax
